--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -54,7 +54,8 @@ task:
         - go mod tidy
   lint_script:
     - cd $(go env GOPATH)/src/github.com/$CIRRUS_REPO_FULL_NAME/
-    - golangci-lint run --enable-all --disable exhaustivestruct,exhaustruct,gochecknoglobals,gomnd,interfacer $GOLANGCI_ARGS $GOLANGCI_MODULES_ARGS -v --timeout 5m --out-format json > $CIRRUS_WORKING_DIR/lint-report.json
+    # nosnakecase complains about miekg/dns API's that we can't change.
+    - golangci-lint run --enable-all --disable exhaustivestruct,exhaustruct,gochecknoglobals,gomnd,interfacer,nosnakecase $GOLANGCI_ARGS $GOLANGCI_MODULES_ARGS -v --timeout 5m --out-format json > $CIRRUS_WORKING_DIR/lint-report.json
   matrix:
     - name: "Go Lint $GOOS New$MODULES_NAME"
       env:
